--- a/sample/istio/serviceentry.yaml
+++ b/sample/istio/serviceentry.yaml
@@ -27,3 +27,18 @@ spec:
     protocol: HTTPS
   resolution: DNS
   location: MESH_EXTERNAL
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: httpbin.org
+  namespace: sample2
+spec:
+  hosts:
+  - httpbin.org
+  ports:
+  - number: 443
+    name: https
+    protocol: HTTPS
+  resolution: DNS
+  location: MESH_EXTERNAL
