changed gateway fqdn to match knative cluster domain. added container port to ksample service to make it work. moved test script to project root.

--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   commonName: sample corporation
   dnsNames:
-  - "localhost"
-  - "*.sample"
+  - "*.sample.example.com"
   duration: 24h
   isCA: false
   issuerRef:
