--- a/k8s/sample/ksample.yaml
+++ b/k8s/sample/ksample.yaml
@@ -8,3 +8,6 @@ spec:
     spec:
       containers:
       - image: kennethreitz/httpbin
+        name: ksample
+        ports:
+        - containerPort: 80
