--- a/k8s/sample/ksample.yaml
+++ b/k8s/sample/ksample.yaml
@@ -7,7 +7,8 @@ spec:
   template:
     spec:
       containers:
-      - image: kennethreitz/httpbin
+      - args: ["-listen=:80", "-text=ksample"]
+        image: hashicorp/http-echo:0.2.3
         name: ksample
         ports:
         - containerPort: 80
