--- a/k8s/igw.yaml
+++ b/k8s/igw.yaml
@@ -12,7 +12,7 @@ spec:
       name: https
       protocol: HTTPS
     hosts:
-    - "*.sample.example.com"
+    - "sample.sample.example.com"
     tls:
       mode: SIMPLE
       privateKey: /etc/istio/ingressgateway-certs/tls.key
@@ -22,4 +22,4 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "*.sample.example.com"
+    - "sample.sample.example.com"
