--- a/k8s/argocd/install.yaml
+++ b/k8s/argocd/install.yaml
@@ -2310,6 +2310,11 @@ spec:
         - argocd-repo-server
         - --redis
         - argocd-redis:6379
+        env:
+        - name: GRPC_GO_LOG_VERBOSITY_LEVEL
+          value: "99"
+        - name: GRPC_GO_LOG_SEVERITY_LEVEL
+          value: "info"
         image: argoproj/argocd:v1.4.2
         imagePullPolicy: Always
         livenessProbe:
@@ -2353,14 +2358,27 @@ spec:
       app.kubernetes.io/name: argocd-server
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/rewriteAppHTTPProbers: "true"
       labels:
         app.kubernetes.io/name: argocd-server
     spec:
       containers:
       - command:
+        - sleep
+        - "365000"
+        image: 519920317464.dkr.ecr.ap-southeast-2.amazonaws.com/corectl:v1.0.0-alpha.28
+        name: corectl
+      - command:
         - argocd-server
         - --staticassets
         - /shared/app
+        - --insecure
+        env:
+        - name: GRPC_GO_LOG_VERBOSITY_LEVEL
+          value: "99"
+        - name: GRPC_GO_LOG_SEVERITY_LEVEL
+          value: "info"
         image: argoproj/argocd:v1.4.2
         imagePullPolicy: Always
         livenessProbe:
