--- a/values-istio.yaml
+++ b/values-istio.yaml
@@ -7,6 +7,7 @@ global:
     mode: REGISTRY_ONLY
 
   proxy:
+    accessLogEncoding: JSON
     accessLogFile: "/dev/stdout"
     envoyStatsd:
       enabled: false
@@ -46,6 +47,7 @@ mixer:
 
 pilot:
   enabled: true
+  enableProtocolSniffingForOutbound: false
   sidecar: false
 
 prometheus:
