re-enabled pilot protocol sniffing (default) and changed argocd-repo-server port name to be tcp-server

--- a/k8s/argocd/install.yaml
+++ b/k8s/argocd/install.yaml
@@ -2117,7 +2117,7 @@ metadata:
   name: argocd-repo-server
 spec:
   ports:
-  - name: server
+  - name: tcp-server
     port: 8081
     protocol: TCP
     targetPort: 8081
